# gmol

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  Makefile.in  cvbond.c  cvbond.h  gmol.c  gmol.h  jmol-colours.c  jmol-colours.h  pyykko-bonds.c  pyykko-bonds.h  radii.c  radii.h
src/samples/: benzene.xyz
