AC_INIT([gmol], [1.0], [moller@mollerware.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])

AM_MAINTAINER_MODE([enable])

PKG_CHECK_MODULES([GTK],   [gtk+-3.0 >= 3.22.5])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES([GL],    [gl >= 10.3.3])
AC_SUBST(GL_CFLAGS)
AC_SUBST(GL_LIBS)

PKG_CHECK_MODULES([GLU],   [glu >= 9.0.0])
AC_SUBST(GLU_CFLAGS)
AC_SUBST(GLU_LIBS)

PKG_CHECK_MODULES([FTGL],  [ftgl >= 2.1.3])
AC_SUBST(GLU_CFLAGS)
AC_SUBST(GLU_LIBS)

PKG_CHECK_MODULES([MAGICKWAND],   [MagickWand >= 6.8.6])
AC_SUBST(MAGICKWAND_CFLAGS)
AC_SUBST(MAGICKWAND_LIBS)


AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
